🔄 Update spatial3 notebook to focus on curating and ingesting spatial data

--- a/docs/spatial3.ipynb
+++ b/docs/spatial3.ipynb
@@ -4,25 +4,21 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "[![Jupyter Notebook](https://img.shields.io/badge/Source%20on%20GitHub-orange)](https://github.com/laminlabs/lamin-usecases/blob/main/docs/spatial3.ipynb)\n"
+    "[![Jupyter Notebook](https://img.shields.io/badge/Source%20on%20GitHub-orange)](https://github.com/laminlabs/lamin-usecases/blob/main/docs/spatial.ipynb)\n"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Train a spatial ML model"
+    "# Curate and ingest spatial data"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Here, we show how we can query, access, and combine several SpatialData datasets across different technologies to train a Dense Net which predicts cell types Xenium data from an associated H&E image.\n",
-    "Specifically, we use the H&E image from Visium data, and the cell type information from overlapping Xenium data.\n",
-    "Both modalities are spatially aligned via an affine transformation.\n",
-    "\n",
-    "This tutorial is adapted from the [SpatialData documentation](https://spatialdata.scverse.org/en/stable/tutorials/notebooks/notebooks/examples/densenet.html)."
+    "Now that we've analyzed and visualized the example dataset in the previous notebooks, let's learn how to curate and ingest our own spatial data."
    ]
   },
   {
@@ -40,93 +36,25 @@
     "warnings.filterwarnings(\"ignore\")\n",
     "\n",
     "import lamindb as ln\n",
-    "import numpy as np\n",
-    "\n",
+    "import bionty as bt\n",
     "import spatialdata as sd\n",
-    "from spatialdata import transform\n",
-    "from spatialdata.dataloader.datasets import ImageTilesDataset\n",
     "\n",
-    "import pytorch_lightning as pl\n",
-    "from pytorch_lightning.callbacks import LearningRateMonitor\n",
-    "from pytorch_lightning.callbacks.progress import TQDMProgressBar\n",
-    "\n",
-    "import torch.multiprocessing as mp\n",
-    "\n",
-    "mp.set_start_method(\"spawn\", force=True)\n",
-    "\n",
-    "ln.track(project=\"spatial guide datasets\")"
+    "spatial_guide_datasets = ln.Project(name=\"spatial guide datasets\").save()\n",
+    "ln.track(project=spatial_guide_datasets)"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "First, we query for Visium and Xenium datasets and create a merged dataset:"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "xenium_1_sd = ln.Artifact.get(key=\"xenium_aligned_1_guide_min.zarr\").load()\n",
-    "visium_sd = ln.Artifact.get(key=\"visium_aligned_guide_min.zarr\").load()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "merged_sd = sd.SpatialData(\n",
-    "    images={\n",
-    "        \"CytAssist_FFPE_Human_Breast_Cancer_full_image\": visium_sd.images[\n",
-    "            \"CytAssist_FFPE_Human_Breast_Cancer_full_image\"\n",
-    "        ],\n",
-    "    },\n",
-    "    shapes={\n",
-    "        \"cell_circles\": xenium_1_sd.shapes[\"cell_circles\"],\n",
-    "        \"cell_boundaries\": xenium_1_sd.shapes[\"cell_boundaries\"],\n",
-    "    },\n",
-    "    tables={\"table\": xenium_1_sd[\"table\"]},\n",
-    ")"
+    "## Creating artifacts"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "The Visium image is rotated with respect to the Xenium data."
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "<img src=\"https://spatialdata.scverse.org/en/stable/_images/dense_net_cell_types.png\" width=\"600\" height=\"500\" alt=\"Dense network of cell types\">"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Next, we create an `ImageTilesDataset` using our merged `SpatialData` object.\n",
-    "We further import an image tile transform, the corresponding Pytorch Lightning `DataModule`, and the final `DenseNet` model from an existing script."
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "````{dropdown} Code of tile_transform, ImageTilesDataset and the DenseNetModel\n",
-    "```{eval-rst}\n",
-    ".. literalinclude:: spatial_ml.py\n",
-    "   :language: python\n",
-    "   :caption: Spatial cell type classification model definition\n",
-    "```\n",
-    "````"
+    "You can use {meth}`~lamindb.Artifact.from_spatialdata` method to create an {class}`~lamindb.Artifact` object from a `SpatialData` object."
    ]
   },
   {
@@ -139,28 +67,8 @@
    },
    "outputs": [],
    "source": [
-    "from spatial_ml import tile_transform, TilesDataModule, DenseNetModel\n",
-    "\n",
-    "dataset = ImageTilesDataset(\n",
-    "    sdata=merged_sd,\n",
-    "    regions_to_images={\"cell_circles\": \"CytAssist_FFPE_Human_Breast_Cancer_full_image\"},\n",
-    "    regions_to_coordinate_systems={\"cell_circles\": \"aligned\"},\n",
-    "    table_name=\"table\",\n",
-    "    tile_dim_in_units=6\n",
-    "    * np.mean(\n",
-    "        transform(merged_sd[\"cell_circles\"], to_coordinate_system=\"aligned\").radius\n",
-    "    ),\n",
-    "    transform=tile_transform,\n",
-    "    rasterize=True,\n",
-    "    rasterize_kwargs={\"target_width\": 32},\n",
-    ")"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Now, we only need to set up a DataModule, our model, and we can start training."
+    "example_blobs_sdata = ln.core.datasets.spatialdata_blobs()\n",
+    "example_blobs_sdata"
    ]
   },
   {
@@ -173,28 +81,305 @@
    },
    "outputs": [],
    "source": [
-    "pl.seed_everything(7)\n",
+    "blobs_af = ln.Artifact.from_spatialdata(\n",
+    "    example_blobs_sdata, key=\"example_blobs.zarr\"\n",
+    ").save()\n",
+    "blobs_af"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "To retrieve the object back from the database you can, e.g., query by `key`:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "tags": [
+     "hide-output"
+    ]
+   },
+   "outputs": [],
+   "source": [
+    "example_blobs_sdata = ln.Artifact.get(key=\"example_blobs.zarr\")\n",
+    "local_zarr_path = blobs_af.cache()  # returns a local path to the cached .zarr store\n",
+    "example_blobs_sdata = (\n",
+    "    blobs_af.load()  # calls sd.read_zarr() on a locally cached .zarr store\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "To see data lineage:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "tags": [
+     "hide-output"
+    ]
+   },
+   "outputs": [],
+   "source": [
+    "blobs_af.view_lineage()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Curating artifacts"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "For the remainder of the guide, we will work with two 10X Xenium and a 10X Visium H&E image datasets that were ingested in raw form [here](https://lamin.ai/laminlabs/lamindata/transform/MN1DpkKGjzbk)."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Metadata is stored in two places in the SpatialData object:\n",
+    "1. Dataset level metadata is stored in `sdata.attrs[\"sample\"]`.\n",
+    "2. Measurement specific metadata is stored in the associated tables in `sdata.tables`."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Define a schema"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "We define a {class}`lamindb.Schema` to curate both sample and table metadata."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "```{dropdown} Curating different spatial technologies\n",
+    "Reading different spatial technologies into SpatialData objects can result in very different objects with different metadata.\n",
+    "Therefore, it can be useful to define technology specific Schemas by reusing Schema components.\n",
+    "```"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# define features\n",
+    "ln.Feature(name=\"organism\", dtype=bt.Organism).save()\n",
+    "ln.Feature(name=\"assay\", dtype=bt.ExperimentalFactor).save()\n",
+    "ln.Feature(name=\"disease\", dtype=bt.Disease).save()\n",
+    "ln.Feature(name=\"tissue\", dtype=bt.Tissue).save()\n",
+    "ln.Feature(name=\"celltype_major\", dtype=bt.CellType, nullable=True).save()\n",
     "\n",
-    "tiles_data_module = TilesDataModule(batch_size=64, num_workers=8, dataset=dataset)\n",
+    "# define simple schemas\n",
+    "flexible_metadata_schema = ln.Schema(\n",
+    "    name=\"Flexible metadata\", itype=ln.Feature, coerce_dtype=True\n",
+    ").save()\n",
+    "ensembl_gene_ids = ln.Schema(\n",
+    "    name=\"Spatial var level (Ensembl gene id)\", itype=bt.Gene.ensembl_gene_id\n",
+    ").save()\n",
     "\n",
-    "tiles_data_module.setup()\n",
-    "train_dl = tiles_data_module.train_dataloader()\n",
-    "val_dl = tiles_data_module.val_dataloader()\n",
-    "test_dl = tiles_data_module.test_dataloader()\n",
-    "\n",
-    "model = DenseNetModel(\n",
-    "    learning_rate=1e-5,\n",
-    "    in_channels=dataset[0][0].shape[0],\n",
-    "    num_classes=len(merged_sd[\"table\"].obs[\"celltype_major\"].cat.categories.tolist()),\n",
+    "# define composite schema\n",
+    "spatial_schema = ln.Schema(\n",
+    "    name=\"Spatialdata schema (flexible)\",\n",
+    "    otype=\"SpatialData\",\n",
+    "    slots={\n",
+    "        \"attrs:sample\": flexible_metadata_schema,\n",
+    "        \"tables:table:obs\": flexible_metadata_schema,\n",
+    "        \"tables:table:var.T\": ensembl_gene_ids,\n",
+    "    },\n",
+    ").save()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Curate a Xenium dataset"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "tags": [
+     "hide-output"
+    ]
+   },
+   "outputs": [],
+   "source": [
+    "# load first of two cropped Xenium datasets\n",
+    "xenium_aligned_1_sdata = (\n",
+    "    ln.Artifact.connect(\"laminlabs/lamindata\")\n",
+    "    .get(key=\"xenium_aligned_1_guide_min.zarr\")\n",
+    "    .load()\n",
+    ")\n",
+    "xenium_aligned_1_sdata"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "tags": [
+     "hide-output"
+    ]
+   },
+   "outputs": [],
+   "source": [
+    "xenium_curator = ln.curators.SpatialDataCurator(xenium_aligned_1_sdata, spatial_schema)\n",
+    "try:\n",
+    "    xenium_curator.validate()\n",
+    "except ln.errors.ValidationError as error:\n",
+    "    print(error)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "tags": [
+     "hide-output"
+    ]
+   },
+   "outputs": [],
+   "source": [
+    "xenium_aligned_1_sdata.tables[\"table\"].obs[\"celltype_major\"] = (\n",
+    "    xenium_aligned_1_sdata.tables[\"table\"]\n",
+    "    .obs[\"celltype_major\"]\n",
+    "    .replace(\n",
+    "        {\n",
+    "            \"CAFs\": \"cancer associated fibroblast\",\n",
+    "            \"Endothelial\": \"endothelial cell\",\n",
+    "            \"Myeloid\": \"myeloid cell\",\n",
+    "            \"PVL\": \"perivascular cell\",\n",
+    "            \"T-cells\": \"T cell\",\n",
+    "            \"B-cells\": \"B cell\",\n",
+    "            \"Normal Epithelial\": \"epithelial cell\",\n",
+    "            \"Plasmablasts\": \"plasmablast\",\n",
+    "            \"Cancer Epithelial\": \"neoplastic epithelial cell\",\n",
+    "        }\n",
+    "    )\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "tags": [
+     "hide-output"
+    ]
+   },
+   "outputs": [],
+   "source": [
+    "try:\n",
+    "    xenium_curator.validate()\n",
+    "except ln.errors.ValidationError as error:\n",
+    "    print(error)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "xenium_curator.slots[\"tables:table:obs\"].cat.add_new_from(\"celltype_major\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "tags": [
+     "hide-output"
+    ]
+   },
+   "outputs": [],
+   "source": [
+    "xenium_1_curated_af = xenium_curator.save_artifact(key=\"xenium1.zarr\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "tags": [
+     "hide-output"
+    ]
+   },
+   "outputs": [],
+   "source": [
+    "xenium_1_curated_af.describe()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Curate additional Xenium datasets"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "We can reuse the same curator for a second Xenium dataset:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "tags": [
+     "hide-output"
+    ]
+   },
+   "outputs": [],
+   "source": [
+    "xenium_aligned_2_sdata = (\n",
+    "    ln.Artifact.connect(\"laminlabs/lamindata\")\n",
+    "    .get(key=\"xenium_aligned_2_guide_min.zarr\")\n",
+    "    .load()\n",
     ")\n",
     "\n",
-    "trainer = pl.Trainer(\n",
-    "    max_epochs=1,\n",
-    "    callbacks=[\n",
-    "        LearningRateMonitor(logging_interval=\"step\"),\n",
-    "        TQDMProgressBar(refresh_rate=5),\n",
-    "    ],\n",
-    "    log_every_n_steps=20,\n",
+    "xenium_aligned_2_sdata.tables[\"table\"].obs[\"celltype_major\"] = (\n",
+    "    xenium_aligned_2_sdata.tables[\"table\"]\n",
+    "    .obs[\"celltype_major\"]\n",
+    "    .replace(\n",
+    "        {\n",
+    "            \"CAFs\": \"cancer associated fibroblast\",\n",
+    "            \"Endothelial\": \"endothelial cell\",\n",
+    "            \"Myeloid\": \"myeloid cell\",\n",
+    "            \"PVL\": \"perivascular cell\",\n",
+    "            \"T-cells\": \"T cell\",\n",
+    "            \"B-cells\": \"B cell\",\n",
+    "            \"Normal Epithelial\": \"epithelial cell\",\n",
+    "            \"Plasmablasts\": \"plasmablast\",\n",
+    "            \"Cancer Epithelial\": \"neoplastic epithelial cell\",\n",
+    "        }\n",
+    "    )\n",
     ")"
    ]
   },
@@ -208,26 +393,120 @@
    },
    "outputs": [],
    "source": [
-    "trainer.fit(model, datamodule=tiles_data_module)\n",
-    "trainer.test(model, datamodule=tiles_data_module)"
+    "xenium_2_curated_af = ln.Artifact.from_spatialdata(\n",
+    "    xenium_aligned_2_sdata, key=\"xenium2.zarr\", schema=spatial_schema\n",
+    ").save()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "tags": [
+     "hide-output"
+    ]
+   },
+   "outputs": [],
+   "source": [
+    "xenium_2_curated_af.describe()"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "If we were to perform a prediction and evaluate it like outlined in the [original guide](https://spatialdata.scverse.org/en/stable/tutorials/notebooks/notebooks/examples/densenet.html), we would see predictions like:"
+    "### Curate Visium datasets"
    ]
   },
   {
    "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Analogously, we can define a Schema and Curator for Visium datasets:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "metadata": {
     "tags": [
      "hide-output"
     ]
    },
+   "outputs": [],
    "source": [
-    "<img src=\"https://spatialdata.scverse.org/en/stable/_images/dense_net_predicted.png\" width=\"1000\" height=\"450\" alt=\"Model predictions\">"
+    "visium_aligned_sdata = (\n",
+    "    ln.Artifact.connect(\"laminlabs/lamindata\")\n",
+    "    .get(key=\"visium_aligned_guide_min.zarr\")\n",
+    "    .load()\n",
+    ")\n",
+    "visium_aligned_sdata"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "tags": [
+     "hide-output"
+    ]
+   },
+   "outputs": [],
+   "source": [
+    "visium_curated_af = ln.Artifact.from_spatialdata(\n",
+    "    visium_aligned_sdata, key=\"visium.zarr\", schema=spatial_schema\n",
+    ").save()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "tags": [
+     "hide-output"
+    ]
+   },
+   "outputs": [],
+   "source": [
+    "visium_curated_af.describe()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Overview of the curated datasets"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "visium_curated_af.view_lineage()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "ln.Artifact.to_dataframe(features=True, include=[\"hash\", \"size\"])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "tags": [
+     "hide-output"
+    ]
+   },
+   "outputs": [],
+   "source": [
+    "ln.finish()"
    ]
   }
  ],
