♻️ Rename QueryDB to DB and arc_db to db

--- a/docs/arc-virtual-cell-atlas.ipynb
+++ b/docs/arc-virtual-cell-atlas.ipynb
@@ -82,7 +82,7 @@
    },
    "outputs": [],
    "source": [
-    "arc_db = ln.QueryDB(\"laminlabs/arc-virtual-cell-atlas\")"
+    "db = ln.DB(\"laminlabs/arc-virtual-cell-atlas\")"
    ]
   },
   {
@@ -104,7 +104,7 @@
    },
    "outputs": [],
    "source": [
-    "project_tahoe = arc_db.Project.get(name=\"Tahoe-100M\")\n",
+    "project_tahoe = db.Project.get(name=\"Tahoe-100M\")\n",
     "project_tahoe"
    ]
   },
@@ -145,7 +145,7 @@
    "outputs": [],
    "source": [
     "# get the collection: https://lamin.ai/laminlabs/arc-virtual-cell-atlas/collection/BpavRL4ntRTzWEE5\n",
-    "collection_tahoe = arc_db.Collection.get(key=\"tahoe100\")\n",
+    "collection_tahoe = db.Collection.get(key=\"tahoe100\")\n",
     "# 14 artifacts in this collection, each correspond to a plate\n",
     "artifacts_tahoe = collection_tahoe.artifacts.distinct()\n",
     "artifacts_tahoe.to_dataframe()"
@@ -279,8 +279,8 @@
    "outputs": [],
    "source": [
     "# lookup objects give you pythonic access to the values\n",
-    "cell_lines = arc_db.bionty.CellLine.lookup(\"ontology_id\")\n",
-    "drugs = arc_db.wetlab.Compound.lookup()\n",
+    "cell_lines = db.bionty.CellLine.lookup(\"ontology_id\")\n",
+    "drugs = db.wetlab.Compound.lookup()\n",
     "\n",
     "artifacts_a549_piroxicam = artifacts_tahoe.filter(\n",
     "    cell_lines=cell_lines.cvcl_0023, compounds=drugs.piroxicam\n",
@@ -326,7 +326,7 @@
    },
    "outputs": [],
    "source": [
-    "obs_metadata = arc_db.Artifact.filter(\n",
+    "obs_metadata = db.Artifact.filter(\n",
     "    key__endswith=\"obs_metadata.parquet\", projects=project_tahoe\n",
     ").one()\n",
     "obs_metadata"
@@ -409,7 +409,7 @@
    },
    "outputs": [],
    "source": [
-    "project_scbasecount = arc_db.Project.get(name=\"scBaseCount\")\n",
+    "project_scbasecount = db.Project.get(name=\"scBaseCount\")\n",
     "project_scbasecount"
    ]
   },
@@ -456,10 +456,10 @@
    },
    "outputs": [],
    "source": [
-    "organisms = arc_db.bionty.Organism.lookup()\n",
-    "tissues = arc_db.bionty.Tissue.lookup()\n",
-    "efos = arc_db.bionty.ExperimentalFactor.lookup()\n",
-    "feature_counts = arc_db.ULabel.filter(type__name=\"STARsolo count features\").lookup()"
+    "organisms = db.bionty.Organism.lookup()\n",
+    "tissues = db.bionty.Tissue.lookup()\n",
+    "efos = db.bionty.ExperimentalFactor.lookup()\n",
+    "feature_counts = db.ULabel.filter(type__name=\"STARsolo count features\").lookup()"
    ]
   },
   {
@@ -473,7 +473,7 @@
    },
    "outputs": [],
    "source": [
-    "h5ads_brain = arc_db.Artifact.filter(\n",
+    "h5ads_brain = db.Artifact.filter(\n",
     "    suffix=\".h5ad\",\n",
     "    projects=project_scbasecount,\n",
     "    organisms=organisms.human,\n",
@@ -541,7 +541,7 @@
    },
    "outputs": [],
    "source": [
-    "sample_meta = arc_db.Artifact.filter(\n",
+    "sample_meta = db.Artifact.filter(\n",
     "    key__endswith=\"sample_metadata.parquet\",\n",
     "    projects=project_scbasecount,\n",
     "    organisms=organisms.human,\n",
