--- a/docs/hubmap.ipynb
+++ b/docs/hubmap.ipynb
@@ -64,7 +64,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "hubmap_db = ln.QueryDB(\"laminlabs/hubmap\")"
+    "db = ln.DB(\"laminlabs/hubmap\")"
    ]
   },
   {
@@ -107,9 +107,7 @@
    },
    "outputs": [],
    "source": [
-    "small_intenstine_collection = hubmap_db.Collection.get(\n",
-    "    key=\"20ee458e5ee361717b68ca72caf6044e\"\n",
-    ")\n",
+    "small_intenstine_collection = db.Collection.get(key=\"20ee458e5ee361717b68ca72caf6044e\")\n",
     "small_intenstine_collection"
    ]
   },
@@ -191,7 +189,7 @@
    "outputs": [],
    "source": [
     "# Get one dataset with a specific type of heart failure\n",
-    "heart_failure_artifact = hubmap_db.Artifact.filter(\n",
+    "heart_failure_artifact = db.Artifact.filter(\n",
     "    diseases__name=\"heart failure with reduced ejection fraction\"\n",
     ").first()\n",
     "heart_failure_artifact"
@@ -220,7 +218,7 @@
    "source": [
     "```python\n",
     "# Get one placenta tissue dataset:\n",
-    "placenta_data = hubmap_db.Artifact.filter(tissues__name=\"placenta\").first().cache()\n",
+    "placenta_data = db.Artifact.filter(tissues__name=\"placenta\").first().cache()\n",
     "\n",
     "def load_matrix(group):\n",
     "    values = group[\"block0_values\"][:]\n",
