--- a/docs/facs3.ipynb
+++ b/docs/facs3.ipynb
@@ -182,7 +182,10 @@
    },
    "outputs": [],
    "source": [
-    "shared_markers = artifacts[0].features[\"var\"] & artifacts[1].features[\"var\"]\n",
+    "shared_markers = (\n",
+    "    artifacts[0].features.slots[\"var\"].members\n",
+    "    & artifacts[1].features.slots[\"var\"].members\n",
+    ")\n",
     "shared_markers.list(\"name\")"
    ]
   }
