--- a/docs/facs.ipynb
+++ b/docs/facs.ipynb
@@ -533,7 +533,7 @@
    },
    "outputs": [],
    "source": [
-    "artifact.features[\"var\"].to_dataframe().head()"
+    "artifact.features.slots[\"var\"].members.to_dataframe().head()"
    ]
   },
   {
@@ -553,7 +553,7 @@
    },
    "outputs": [],
    "source": [
-    "markers = artifact.features[\"var\"].lookup()\n",
+    "markers = artifact.features.slots[\"var\"].members.lookup()\n",
     "markers.cd14"
    ]
   },
@@ -606,7 +606,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "py311",
    "language": "python",
    "name": "python3"
   },
@@ -620,7 +620,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.13"
+   "version": "3.11.11"
   },
   "nbproject": {
    "id": "OWuTtS4SApon",
