--- a/docs/multimodal.ipynb
+++ b/docs/multimodal.ipynb
@@ -52,6 +52,7 @@
     "import lamindb as ln\n",
     "import bionty as bt\n",
     "\n",
+    "bt.settings.organism = \"human\"\n",
     "ln.track()"
    ]
   },
@@ -93,8 +94,8 @@
    },
    "outputs": [],
    "source": [
-    "mdata_af = ln.Artifact.from_mudata(mdata, key=\"papalexi.h5mu\")\n",
-    "mdata_af"
+    "mdata_artifact = ln.Artifact.from_mudata(mdata, key=\"papalexi.h5mu\")\n",
+    "mdata_artifact"
    ]
   },
   {
@@ -108,7 +109,7 @@
    "outputs": [],
    "source": [
     "# MuData Artifacts have the corresponding otype\n",
-    "mdata_af.otype"
+    "mdata_artifact.otype"
    ]
   },
   {
@@ -122,7 +123,7 @@
    "outputs": [],
    "source": [
     "# MuData Artifacts can easily be loaded back into memory\n",
-    "papalexi_in_memory = mdata_af.load()\n",
+    "papalexi_in_memory = mdata_artifact.load()\n",
     "papalexi_in_memory"
    ]
   },
@@ -207,7 +208,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "mudata_schema"
+    "mudata_schema.describe()"
    ]
   },
   {
@@ -330,6 +331,7 @@
    "outputs": [],
    "source": [
     "# clean up test instance\n",
+    "bt.settings.organism = None\n",
     "!rm -r test-multimodal\n",
     "!lamin delete --force test-multimodal"
    ]
