♻️ Update image rendering scales

--- a/docs/spatial.ipynb
+++ b/docs/spatial.ipynb
@@ -181,8 +181,8 @@
    "outputs": [],
    "source": [
     "axes = plt.subplots(1, 2, figsize=(10, 10))[1].flatten()\n",
-    "sdata.pl.render_images(\"he_image\").pl.show(ax=axes[0], title=\"H&E image\")\n",
-    "sdata.pl.render_images(\"morphology_focus\").pl.show(ax=axes[1], title=\"Morphology image\")"
+    "sdata.pl.render_images(\"he_image\", scale=\"scale4\").pl.show(ax=axes[0], title=\"H&E image\")\n",
+    "sdata.pl.render_images(\"morphology_focus\", scale=\"scale4\").pl.show(ax=axes[1], title=\"Morphology image\")"
    ]
   },
   {
@@ -207,7 +207,7 @@
     "        target_coordinate_system=\"global\",\n",
     "    )\n",
     "\n",
-    "crop0(sdata).pl.render_images(\"he_image\").pl.render_shapes(\n",
+    "crop0(sdata).pl.render_images(\"he_image\", scale=\"scale2\").pl.render_shapes(\n",
     "    \"cell_boundaries\", \n",
     "    fill_alpha=0, \n",
     "    outline_alpha=0.5\n",
