--- a/docs/spatial.ipynb
+++ b/docs/spatial.ipynb
@@ -11,7 +11,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Spatial"
+    "# Spatial RNA-seq"
    ]
   },
   {
@@ -79,17 +79,25 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "tags": [
+     "hide-output"
+    ]
+   },
    "outputs": [],
    "source": [
-    "# pip install 'lamindb[jupyter,bionty]' spatialdata spatialdata-plot\n",
+    "# pip install lamindb spatialdata spatialdata-plot\n",
     "!lamin init --storage ./test-spatial --modules bionty"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "tags": [
+     "hide-output"
+    ]
+   },
    "outputs": [],
    "source": [
     "import warnings\n",
@@ -120,7 +128,7 @@
     "We'll work with a human lung cancer dataset generated using 10x Genomics Xenium platform and available in a public instance. \n",
     "This FFPE (formalin-fixed paraffin-embedded) tissue sample includes spatial gene expression profiles.\n",
     "\n",
-    "Let's query the database to find Xenium datasets from lung tissue:"
+    "Create the central query object for this instance:"
    ]
   },
   {
@@ -133,10 +141,30 @@
    },
    "outputs": [],
    "source": [
-    "all_xenium_data = (\n",
-    "    ln.Artifact.connect(\"laminlabs/lamindata\")\n",
-    "    .filter(assay=\"Xenium Spatial Gene Expression\", tissue=\"lung\")\n",
+    "db = ln.DB(\"laminlabs/lamindata\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Now query the database to find Xenium datasets from lung tissue:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "tags": [
+     "hide-output"
+    ]
+   },
+   "outputs": [],
+   "source": [
+    "all_xenium_data = db.Artifact.filter(\n",
+    "    assay=\"Xenium Spatial Gene Expression\", tissue=\"lung\"\n",
     ")\n",
+    "\n",
     "all_xenium_data.to_dataframe()"
    ]
   },
@@ -145,13 +173,6 @@
    "metadata": {},
    "source": [
     "## Analyze spatial data"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Spatial data datasets stored as SpatialData objects can easily be examined and analyzed through the SpatialData framework, [squidpy](https://github.com/scverse/squidpy), and [scanpy](https://github.com/scverse/scanpy):"
    ]
   },
   {
@@ -171,7 +192,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Use `spatialdata-plot` to get an overview of the dataset:"
+    "Spatial data datasets stored as SpatialData objects can easily be examined and analyzed through the SpatialData framework, [squidpy](https://github.com/scverse/squidpy), and [scanpy](https://github.com/scverse/scanpy).\n",
+    "\n",
+    "We use [spatialdata-plot](https://github.com/scverse/spatialdata-plot) to get an overview of the dataset:"
    ]
   },
   {
@@ -181,8 +204,12 @@
    "outputs": [],
    "source": [
     "axes = plt.subplots(1, 2, figsize=(10, 10))[1].flatten()\n",
-    "sdata.pl.render_images(\"he_image\", scale=\"scale4\").pl.show(ax=axes[0], title=\"H&E image\")\n",
-    "sdata.pl.render_images(\"morphology_focus\", scale=\"scale4\").pl.show(ax=axes[1], title=\"Morphology image\")"
+    "sdata.pl.render_images(\"he_image\", scale=\"scale4\").pl.show(\n",
+    "    ax=axes[0], title=\"H&E image\"\n",
+    ")\n",
+    "sdata.pl.render_images(\"morphology_focus\", scale=\"scale4\").pl.show(\n",
+    "    ax=axes[1], title=\"Morphology image\"\n",
+    ")"
    ]
   },
   {
@@ -207,13 +234,12 @@
     "        target_coordinate_system=\"global\",\n",
     "    )\n",
     "\n",
+    "\n",
     "crop0(sdata).pl.render_images(\"he_image\", scale=\"scale2\").pl.render_shapes(\n",
-    "    \"cell_boundaries\", \n",
-    "    fill_alpha=0, \n",
-    "    outline_alpha=0.5\n",
-    "    ).pl.show(figsize=(15, 10),\n",
-    "              title=\"H&E image & cell boundaries\", \n",
-    "              coordinate_systems=\"global\")\n"
+    "    \"cell_boundaries\", fill_alpha=0, outline_alpha=0.5\n",
+    ").pl.show(\n",
+    "    figsize=(15, 10), title=\"H&E image & cell boundaries\", coordinate_systems=\"global\"\n",
+    ")"
    ]
   },
   {
@@ -234,7 +260,7 @@
    },
    "outputs": [],
    "source": [
-    "adata = sdata.tables['table']\n",
+    "adata = sdata.tables[\"table\"]\n",
     "adata"
    ]
   },
@@ -255,128 +281,17 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Calculate the quality control metrics on the AnnData object using `scanpy.pp.calculate_qc_metrics`:"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "sc.pp.calculate_qc_metrics(adata, percent_top=(10, 20, 50, 150), inplace=True)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "The percentage of control probes and control codewords can be calculated from the `obs` slot:"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "tags": [
-     "hide-output"
-    ]
-   },
-   "outputs": [],
-   "source": [
-    "cprobes = (\n",
-    "    adata.obs[\"control_probe_counts\"].sum() / adata.obs[\"total_counts\"].sum() * 100\n",
-    ")\n",
-    "cwords = (\n",
-    "    adata.obs[\"control_codeword_counts\"].sum() / adata.obs[\"total_counts\"].sum() * 100\n",
-    ")\n",
-    "print(f\"Negative DNA probe count %: {cprobes}\")\n",
-    "print(f\"Negative decoding count %: {cwords}\")"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Plot the distribution of total transcripts per cell, unique transcripts per cell, area of segmented cells and the ratio of nuclei area to their cells:"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "fig, axs = plt.subplots(1, 4, figsize=(15, 4))\n",
+    "Quality control metrics can be calculated using `scanpy.pp.calculate_qc_metrics`. \n",
+    "Cells and genes can be filtered based on minimum thresholds using `scanpy.pp.filter_cells` and `scanpy.pp.filter_genes`.\n",
     "\n",
-    "axs[0].set_title(\"Total transcripts per cell\")\n",
-    "axs[0].hist(adata.obs[\"total_counts\"], bins=100)\n",
+    "For normalization and dimensionality reduction, standard [scanpy](https://github.com/scverse/scanpy) workflows include:\n",
+    "- `scanpy.pp.normalize_total` for library size normalization\n",
+    "- `scanpy.pp.log1p` for log transformation\n",
+    "- `scanpy.pp.pca` for principal component analysis\n",
+    "- `scanpy.pp.neighbors` for neighborhood graph computation\n",
     "\n",
-    "axs[1].set_title(\"Unique transcripts per cell\")\n",
-    "axs[1].hist(adata.obs[\"n_genes_by_counts\"], bins=100)\n",
-    "\n",
-    "axs[2].set_title(\"Area of segmented cells\")\n",
-    "axs[2].hist(adata.obs[\"cell_area\"], bins=100)\n",
-    "\n",
-    "axs[3].set_title(\"Nucleus ratio\")\n",
-    "axs[3].hist(adata.obs[\"nucleus_area\"] / adata.obs[\"cell_area\"], bins=100)\n",
-    "\n",
-    "plt.tight_layout()"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Filter the cells based on the minimum number of counts required using `scanpy.pp.filter_cells` and the genes based on the minimum number of cells required with `scanpy.pp.filter_genes`. \n",
-    "The parameters for the both were specified based on the plots above."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "sc.pp.filter_cells(adata, min_counts=10)\n",
-    "sc.pp.filter_genes(adata, min_cells=10)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Normalize the total counts per cell using `scanpy.pp.normalize_total`, apply log transformation with `scanpy.pp.log1p`, perform principal component analysis using `scanpy.pp.pca`, and compute a neighborhood graph of observations with `scanpy.pp.neighbors`:"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "adata.layers[\"counts\"] = adata.X.copy()\n",
-    "sc.pp.normalize_total(adata, inplace=True)\n",
-    "sc.pp.log1p(adata)\n",
-    "sc.pp.pca(adata)\n",
-    "sc.pp.neighbors(adata)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Compute a UMAP embedding of the neighborhood graph using `scanpy.tl.umap` and cluster cells into groups using `scanpy.tl.leiden`:"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "sc.tl.umap(adata)\n",
-    "sc.tl.leiden(adata)"
+    "For this analysis, we use precomputed Leiden clustering results rather than running the full preprocessing pipeline. \n",
+    "For a full tutorial on how to perform analysis of Xenium data, we refer to [squidpy's Xenium tutorial](https://squidpy.readthedocs.io/en/stable/notebooks/tutorials/tutorial_xenium.html)."
    ]
   },
   {
@@ -417,13 +332,6 @@
     "        \"leiden\",\n",
     "    ],\n",
     ")"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "For a full tutorial on how to perform analysis of Xenium data, we refer to [squidpy's Xenium tutorial](https://squidpy.readthedocs.io/en/stable/notebooks/tutorials/tutorial_xenium.html)."
    ]
   },
   {
