--- a/docs/spatial2.ipynb
+++ b/docs/spatial2.ipynb
@@ -20,9 +20,9 @@
    "source": [
     "SpatialDatasets can be visualized interactively on LaminHub using [Vitessce](https://vitessce.io/).  \n",
     "\n",
-    "Here is [a guide](https://docs.lamin.ai/vitessce) for visualizing spatial data with Vitessce.\n",
+    "Here is [a guide](https://docs.lamin.ai/vitessce#visualize-a-spatialdata-object-zarr-format) for visualizing spatial data with Vitessce.\n",
     "\n",
-    "This [notebook](https://lamin.ai/laminlabs/lamindata/transform/3uuzDQpqbF8M) adds the Vitessce visualization to [this Xenium dataset](https://lamin.ai/laminlabs/lamindata/artifact/8sPWscz3SICG1D8t) discussed on the previous page."
+    "This [notebook](https://lamin.ai/laminlabs/lamindata/transform/3uuzDQpqbF8M) adds the Vitessce visualization to [this Xenium dataset](https://lamin.ai/laminlabs/lamindata/artifact/8sPWscz3SICG1D8t) discussed on the [previous page](https://docs.lamin.ai/spatial)."
    ]
   },
   {
