--- a/docs/spatial3.ipynb
+++ b/docs/spatial3.ipynb
@@ -189,7 +189,7 @@
     "ln.Feature(name=\"assay\", dtype=bt.ExperimentalFactor).save()\n",
     "ln.Feature(name=\"disease\", dtype=bt.Disease).save()\n",
     "ln.Feature(name=\"tissue\", dtype=bt.Tissue).save()\n",
-    "ln.Feature(name=\"celltype_major\", dtype=bt.CellType, nullable=True).save()\n",
+    "ln.Feature(name=\"celltype_major\", dtype=bt.CellType).save()\n",
     "\n",
     "# define simple schemas\n",
     "flexible_metadata_schema = ln.Schema(\n",
@@ -219,6 +219,22 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Create the central query object for the public instance:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "db = ln.DB(\"laminlabs/lamindata\")"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
@@ -229,11 +245,7 @@
    "outputs": [],
    "source": [
     "# load first of two cropped Xenium datasets\n",
-    "xenium_aligned_1_sdata = (\n",
-    "    ln.Artifact.connect(\"laminlabs/lamindata\")\n",
-    "    .get(key=\"xenium_aligned_1_guide_min.zarr\")\n",
-    "    .load()\n",
-    ")\n",
+    "xenium_aligned_1_sdata = db.Artifact.get(key=\"xenium_aligned_1_guide_min.zarr\").load()\n",
     "xenium_aligned_1_sdata"
    ]
   },
@@ -358,11 +370,7 @@
    },
    "outputs": [],
    "source": [
-    "xenium_aligned_2_sdata = (\n",
-    "    ln.Artifact.connect(\"laminlabs/lamindata\")\n",
-    "    .get(key=\"xenium_aligned_2_guide_min.zarr\")\n",
-    "    .load()\n",
-    ")\n",
+    "xenium_aligned_2_sdata = db.Artifact.get(key=\"xenium_aligned_2_guide_min.zarr\").load()\n",
     "\n",
     "xenium_aligned_2_sdata.tables[\"table\"].obs[\"celltype_major\"] = (\n",
     "    xenium_aligned_2_sdata.tables[\"table\"]\n",
@@ -435,11 +443,7 @@
    },
    "outputs": [],
    "source": [
-    "visium_aligned_sdata = (\n",
-    "    ln.Artifact.connect(\"laminlabs/lamindata\")\n",
-    "    .get(key=\"visium_aligned_guide_min.zarr\")\n",
-    "    .load()\n",
-    ")\n",
+    "visium_aligned_sdata = db.Artifact.get(key=\"visium_aligned_guide_min.zarr\").load()\n",
     "visium_aligned_sdata"
    ]
   },
