--- a/docs/spatial4.ipynb
+++ b/docs/spatial4.ipynb
@@ -248,7 +248,7 @@
    "execution_count": null,
    "metadata": {
     "tags": [
-     "hide-output"
+     "hide-cell"
     ]
    },
    "outputs": [],
