--- a/docs/spatial3.ipynb
+++ b/docs/spatial3.ipynb
@@ -181,7 +181,11 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "tags": [
+     "hide-output"
+    ]
+   },
    "outputs": [],
    "source": [
     "# define features\n",
@@ -228,7 +232,11 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "tags": [
+     "hide-output"
+    ]
+   },
    "outputs": [],
    "source": [
     "db = ln.DB(\"laminlabs/lamindata\")"
@@ -314,7 +322,11 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "tags": [
+     "hide-output"
+    ]
+   },
    "outputs": [],
    "source": [
     "xenium_curator.slots[\"tables:table:obs\"].cat.add_new_from(\"celltype_major\")"
@@ -494,7 +506,11 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "tags": [
+     "hide-output"
+    ]
+   },
    "outputs": [],
    "source": [
     "ln.Artifact.to_dataframe(features=True, include=[\"hash\", \"size\"])"
