--- a/docs/spatial4.ipynb
+++ b/docs/spatial4.ipynb
@@ -61,17 +61,69 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "First, we query for Visium and Xenium datasets and create a merged dataset:"
+    "First, we query for Xenium and Visium datasets that we curated and ingested on the [previous page](https://docs.lamin.ai/spatial3) and create a merged dataset:"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "tags": [
+     "hide-output"
+    ]
+   },
    "outputs": [],
    "source": [
-    "xenium_1_sd = ln.Artifact.get(key=\"xenium_aligned_1_guide_min.zarr\").load()\n",
-    "visium_sd = ln.Artifact.get(key=\"visium_aligned_guide_min.zarr\").load()"
+    "xenium_datasets = ln.Artifact.filter(\n",
+    "    tissue=\"breast\",\n",
+    "    assay=\"10x Xenium\",\n",
+    ")\n",
+    "xenium_datasets.to_dataframe()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "tags": [
+     "hide-output"
+    ]
+   },
+   "outputs": [],
+   "source": [
+    "visium = ln.Artifact.filter(\n",
+    "    tissue=\"breast\",\n",
+    "    assay=\"Visium Spatial Gene Expression\",\n",
+    ")\n",
+    "visium.to_dataframe()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "From the query results, we select the first Xenium dataset and the Visium dataset. "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "tags": [
+     "hide-output"
+    ]
+   },
+   "outputs": [],
+   "source": [
+    "xenium_1_sd = xenium_datasets[0].load()\n",
+    "visium_sd = visium[0].load()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Because both datasets were curated with matching tissue, disease, and organism metadata, we can merge them for multi-modal analysis."
    ]
   },
   {
